fix button vertical align

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -56,7 +56,7 @@ p {
   justify-content: center;
   width: 200px;
   height: 60px;
-  padding: 0 12px;
+  padding: 2px 12px 0;
   font-size: 18px;
   line-height: 18px;
   background-color: $color-main;
